# kerners

./: .gitignore  AGENTS-kr.md  AGENTS.md  Cargo.toml  Makefile  README-en.md  README.md  build.rs  linker_aarch64.ld  linker_riscv64.ld  plan.md  run.sh
.cargo/: config.toml
docs/: README.md  block.md  board-module-system.md  console.md  drivers.md  dtb.md  ipc.md  log.md  mm.md  module.md  plt.md  proc.md  qemu-guide.md  sync.md  syscall.md  testing.md  vfs.md  virtio.md
modules/hello/: Cargo.toml  build.sh
modules/test_block/: Cargo.toml
modules/test_ipc/: Cargo.toml
modules/test_log/: Cargo.toml
modules/test_mm/: Cargo.toml
modules/test_thread/: Cargo.toml
modules/test_vfs/: Cargo.toml
scripts/: build_test_modules.sh  prepare_test_disk.sh  run_tests.sh
src/: console.rs  main.rs  test_runner.rs
src/block/: mod.rs  ramdisk.rs  virtio_blk.rs
src/boards/: board_module.rs  mod.rs  qemu_virt_aarch64.rs  qemu_virt_aarch64_smp.rs  qemu_virt_riscv64.rs  qemu_virt_riscv64_smp.rs  registry.rs
src/drivers/: config.rs  mod.rs  probe.rs
src/dtb/: mod.rs
src/fs/: fd.rs  mod.rs  path.rs
src/ipc/: message_queue.rs  mod.rs
src/log/: buffer.rs  macros.rs  mod.rs
src/mm/: heap.rs  mod.rs  page.rs
src/module/: elf.rs  loader.rs  mod.rs  symbol.rs  test_symbols.rs
src/proc/: context.rs  mod.rs  percpu.rs  scheduler.rs  user.rs
src/sync/: mod.rs  mutex.rs  rcu.rs  rwlock.rs  semaphore.rs  seqlock.rs  spinlock.rs
src/syscall/: fs.rs  mod.rs  process.rs
src/virtio/: irq.rs  mmio.rs  (+2 more)
targets/: aarch64-unknown-none.json  riscv64-unknown-elf.json
(+25 files in other folders)
