[package]
name = "kerners"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-or-later"

[workspace]
exclude = ["modules/*"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = false

[features]
default = []
# 테스트 모듈을 커널에 임베드 (빌드 시 모듈 파일이 필요)
embed_test_module = []

[dependencies]
linked_list_allocator = "0.10"

[build-dependencies]
cc = "*"
